[package]
name = "huffman"
version = "0.0.2"
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Huffman is a library to decode huffman-encoded data."
license = "MIT"
repository = "https://github.com/antoyo/huffman-rs"
documentation = "https://antoyo.github.io/huffman-rs/huffman/"

[features]
nightly = []

[dependencies]
bitreader = "^0.1"

[package.metadata.release]
upload-doc = true
